@@ -1,3 +1,11 @@
+Thu Mar  7 13:57:18 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>
+
+        * utils/logWalker/Invocation.cpp:
+        * utils/logWalker/Log.cpp:
+        * utils/logWalker/Thread.cpp:
+
+          Fix compiler warnings.
+
 Wed Mar 06 13:29:00 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>
 
         * tao/PI_Server/ServerRequestInterceptorC.h:
